Updated git cheat sheet with git command builder

--- a/developer-tools/git-command-builder.html
+++ b/developer-tools/git-command-builder.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/git-command-builder.css">
 
-    <title>Git Command Builder</title>
+    <title>Basic Git Command Builder</title>
 </head>
 
 <body>
